# DRTCE---Dynamic-Run-Time-Code-Evaluator

./: smart_type.h
context_tree/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  context_tree.1  context_tree.cc  context_tree.cpp  context_tree.h  context_tree.lsm  context_tree.lsm.in  context_tree.spec  context_tree.spec.in  context_tree.texinfo  system.h  texinfo.tex  xmalloc.c
context_tree/autom4te.cache/: output.0  traces.0
dpp/: Makefile  dpp.lua  drtce.h  test.cpp
smart-type/: smart_type.cpp
smart_iterator/: iter.lua  smart_iterator.h  test.cpp
smart_type/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  dep.lua  smart_type.1  smart_type.cc  smart_type.cpp  smart_type.lsm  smart_type.lsm.in  smart_type.spec  smart_type.spec.in  smart_type.texinfo  system.h  test.cpp  xmalloc.c
smart_type/autom4te.cache/: output.0  requests  traces.0
symbol_table/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.h  config.status  configure  configure.in  symbol_table.1  symbol_table.cc  symbol_table.h  symbol_table.lsm  symbol_table.lsm.in  symbol_table.spec  symbol_table.spec.in  symbol_table.texinfo  system.h  test_symbol_table.cpp  xmalloc.c
symbol_table/autom4te.cache/: output.0  traces.0
symbol_tree/: Makefile.am  configure  configure.in  symbol_table.cpp
